# CoPhaser

./: .gitignore  MANIFEST.in  README.MD  pyproject.toml
paper/code/figure_1/: figure_1.ipynb  simulations_continuous.ipynb
paper/code/figure_2/: battich.ipynb  cell_cycle_figure.ipynb
paper/code/figure_3/: figure.ipynb
paper/code/figure_4/: 1_Make_Zarr.ipynb  2_QC_Merge copy.ipynb  3_Run_Model.ipynb  4_Run_Analysis.ipynb
paper/code/figure_5/: aorta.ipynb  aorta_mean_mad.ipynb  figure.ipynb
paper/code/figure_6/: cell_cycle.ipynb  figure_menstrual_cycle.ipynb  menstrual_cycle.ipynb
paper/code/figure_7/: figure_somite.ipynb  somite_clock.ipynb
paper/code/figure_S1/: plot_creation.ipynb  simulations_continuous_without_MI.ipynb  simulations_continuous_without_z.ipynb
paper/code/figure_S10/: somite_supp_fig.ipynb
paper/code/figure_S2/: plot_creation.ipynb
paper/code/figure_S3/: figure.ipynb  low_genes.ipynb
paper/code/figure_S4/: plot_creation.ipynb
paper/code/figure_S5/: figure_sup_cycling_classifier.ipynb
paper/code/figure_S6/: figure_sup_cancer.ipynb
paper/code/figure_S7/: spatial_Sup_Fig.ipynb
paper/code/figure_S8/: figure_supp_circadian.ipynb
paper/code/figure_S9/: figure_S9_python_menstrual.ipynb
paper/code/set_up/: constants.py  plot_helpers.py
src/CoPhaser/: __init__.py  gene_sets.py  loss.py  plotting.py  simulation.py  single_cell_dataset.py  trainer.py  utils.py
src/CoPhaser/MINE/: MINE.py  __init__.py
src/CoPhaser/model/: CoPhaser.py  CoPhaser_Loader.py  __init__.py  bernoulli_encoder.py  freezableModule.py  interpretability.py  (+3 more)
(+13 files in other folders)
