[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CoPhaser"
version = "0.1"
dependencies = [
    "scanpy==1.11.5",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "captum==0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"CoPhaser" = ["resources/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]